--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us | Burgos Air Conditioning</title>
+    <title>Contact Us | Bluejay Painting</title>
 
     <meta name="description"
         content="Contact us for all your HVAC service inquiries in Highlands, Texas. Get in touch for professional consultation and reliable HVAC services.">
@@ -25,33 +25,11 @@
 
 <body>
     <section class="nav-hero position-relative">
-        <!-- Top of the navbar -->
-        <div class="top-information bg-primary">
-            <div class="container py-3 d-flex justify-content-between">
-                <div class="d-flex">
-                    <p class="text-white fw-500 ms-4 pe-3 border-md-end border-md-3">
-                        <a title="city" class="me-3 text-white pe-auto" href="/hvac-service-highlands-texas.html"><i
-                                class="fs-15 me-1 fa-solid fa-location-dot text-secondary"></i>
-                            Highlands, TX
-                        </a>
-                    </p>
-                    <p class="text-white fw-500 ms-4 d-md-block d-none">
-                        <i class="fa-solid fa-wind me-1 text-secondary"></i> Reliable HVAC Experts
-                    </p>
-                </div>
-
-                <div>
-                    <a href="tel:+12817940144" title="phone number" class="text-white fw-500"><i
-                            class="fs-15 fa-solid fa-phone text-secondary me-1"></i> +1 (281) 794-0144 </a>
-                </div>
-            </div>
-        </div>
-
-        <nav class="navbar navbar-expand-lg navbar-dark mb-4">
+        <nav class="navbar navbar-expand-xl navbar-dark position-relative" style="z-index: 3;">
             <div class="container">
-                          <a title="navbar-logo" class="navbar-brand" href="/index.html"><img src="/img/logo-white.png"
+                <a title="navbar-logo" class="navbar-brand" href="/index.html"><img src="/img/logo-white.png"
                         alt="nav-logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <button style="z-index: 3;" class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -59,26 +37,20 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" title="homepage" aria-current="page" href="/index.html">Home</a>
+                            <a class="nav-link" title="homepage" aria-current="page" href="">Painting Services</a>
                         </li>
                         <li class="nav-item">
-                            <a title="Air Conditioning" class="nav-link"
-                                href="/air-conditioning-service-highlands-texas.html">Air
-                                Conditioning</a>
+                            <a title="Air Conditioning" class="nav-link" href="">Drywall Services</a>
                         </li>
                         <li class="nav-item">
                             <a title="Heaing Service" class="nav-link"
-                                href="/heating-service-highlands-texas.html">Heating</a>
-                        </li>
-                        <li class="nav-item">
-                            <a title="Commercial Service" class="nav-link"
-                              href="/commercial-hvac-service-highlands-texas.html">Commerical HVAC Service</a>
+                                href="">Service Areas</a>
                         </li>
                     </ul>
 
-                    <div class="d-lg-block d-flex justify-content-center">
+                    <div style="z-index: 3;" class="d-lg-block d-flex justify-content-center">
                         <a href="/contact.html" title="contact page"
-                            class="btn btn-secondary px-4 fs-18 rounded-0 col-lg col-12">
+                            class="btn btn-light fw-500 px-4 fs-18 rounded-1 col-lg col-12">
                             Contact Us
                         </a>
                     </div>
@@ -89,7 +61,7 @@
 
     <section class="map">
         <div class="container">
-            <p class="sub-header sub-header-start text-start">Highlands, Texas</p>
+            <p class="sub-header sub-header-start text-start">Rockford, Illinois</p>
             <h2 class="header text-start">Call us for a Free Estimate</h1>
                 <div class="row flex-md-row flex-row-reverse flex-column-reverse">
                     <div class="col-md-9">
@@ -99,10 +71,10 @@
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="col-md-3 mb-md-0 mb-5 phone">
-                        <a href="tel:+12817940144">
+                        <a href="tel:+17797711143">
                             <i class="fa-solid fa-phone"></i>
                             <h6>Phone</h6>
-                            <p>+1 (281) 794-0144</p>
+                            <p>+1 (779) 771-1143</p>
                         </a>
                     </div>
                 </div>
@@ -114,7 +86,7 @@
         <div class="container mt-5">
             <div class="row fw-500 fs-16">
                 <div class="col-lg pe-lg-5 me-lg-5 col-12 mb-lg-0 mb-5 text-lg-left">
-                   <img src="/img/logo.png" alt="logo" style="object-fit: contain;" width="300" height="300"
+                    <img src="/img/logo.png" alt="logo" style="object-fit: contain;" width="300" height="300"
                         class="d-inline-block my-auto mb-3" />
                 </div>
 
@@ -126,7 +98,8 @@
                         <p><a title="Heating" href="heating-service-highlands-texas.html">Heating
                             </a>
                         </p>
-                       <p><a title="Commercial Service" href="/commercial-hvac-service-highlands-texas.html">Commercial Service
+                        <p><a title="Commercial Service" href="/commercial-hvac-service-highlands-texas.html">Commercial
+                                Service
                             </a></p>
                         <p><a title="Contact Us" href="/contact.html">Contact Us</a></p>
                         <p><a title="HVAC Services" href="/hvac-service-highlands-texas.html">HVAC Services</a>
@@ -156,7 +129,7 @@
                                 <path
                                     d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
                             </svg>
-                            <a href="tel:+12817940144"> +1 (281) 794-0144 </a>
+                            <a href="tel:+17797711143"> +1 (281) 794-0144 </a>
                         </p>
                         <p class="d-flex">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -172,11 +145,10 @@
             </div>
             <hr class="mt-4" />
 
-            <p class="pt-2 pb-3 fw-500 text-dark text-center border-1 border-top border-white pt-5">&copy; Burgos Air
-                Conditioning. All
+            <p class="pt-2 pb-3 fw-500 text-white text-center border-1 border-top border-white pt-5">&copy; Bluejay Painting. All
                 rights
                 reserved.</p>
-            <p class="pt-2 pb-3 fw-500 text-dark text-center">The content available on this website is owned by us
+            <p class="pt-2 pb-3 fw-500 text-white text-center">The content available on this website is owned by us
                 and
                 our licensors. Copying any content, including images, without our consent is prohibited.</p>
         </div>
