--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Painting Services in Highlands, Texas | Burgos Air Conditioning</title>
+    <title>Painting Services in Rocford, Illinois | Burgos Air Conditioning</title>
 
     <meta name="description"
-        content="We offer professional HVAC services in Highlands, Texas, specializing in heating, cooling, AC installation, and more">
+        content="We offer professional HVAC services in Rocford, Illinois, specializing in heating, cooling, AC installation, and more">
     <meta name="keywords" content="HVAC services, Highlands Texas, heating, cooling, AC installation, HVAC experts">
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
@@ -354,7 +354,7 @@
                         </div>
                         <div class="user-details">
                             <p class="name">Richard Simon</p>
-                            <p class="address">Highlands, Texas</p>
+                            <p class="address">Rocford, Illinois</p>
                         </div>
                     </div>
                 </div>
@@ -372,7 +372,7 @@
                         </div>
                         <div class="user-details">
                             <p class="name">Richard Simon</p>
-                            <p class="address">Highlands, Texas</p>
+                            <p class="address">Rocford, Illinois</p>
                         </div>
                     </div>
                 </div>
@@ -390,7 +390,7 @@
                         </div>
                         <div class="user-details">
                             <p class="name">Richard Simon</p>
-                            <p class="address">Highlands, Texas</p>
+                            <p class="address">Rocford, Illinois</p>
                         </div>
                     </div>
                 </div>
@@ -408,7 +408,7 @@
                         </div>
                         <div class="user-details">
                             <p class="name">Richard Simon</p>
-                            <p class="address">Highlands, Texas</p>
+                            <p class="address">Rocford, Illinois</p>
                         </div>
                     </div>
                 </div>
@@ -523,42 +523,77 @@
         </div>
     </section>
 
-    <footer class="position-relative pt-3">
+    <footer data-aos="zoom-in" class="position-relative pt-3">
         <!-- <img class="position-absolute footer-bg" src="/img/grass.jpg" alt="lawn with house"> -->
         <div class="container mt-5">
             <div class="row fw-500 fs-16">
                 <div class="col-lg pe-lg-5 me-lg-5 col-12 mb-lg-0 mb-5 text-lg-left">
-                    <img src="/img/logo-white.png" alt="logo" style="object-fit: contain;" width="300" height="300"
-                        class="d-inline-block my-auto mb-3" />
+                    <a href="/index.html">
+                        <img src="/img/logo-white.png" alt="logo" style="object-fit: contain;" width="300" height="300"
+                            class="d-inline-block my-auto mb-3" />
+                    </a>
                 </div>
 
                 <div class="col-lg col-md-4 col-12 mb-lg-0 mb-4 footer-col text-left">
-                    <p class="mb-3"><strong class="text-secondary h5 fw-600 fs-20"> Company</strong></p>
+                    <p class="mb-3"><strong class="text-secondary h5 fw-500 fs-20"> Navigations</strong></p>
                     <div class="footer-nav">
-                        <p><a title="Air Conditioning" href="/air-conditioning-service-highlands-texas.html">Air
-                                Conditioning</a></p>
-                        <p><a title="Heating" href="heating-service-highlands-texas.html">Heating
+                        <p>
+                            <a title="Commercial Services" href="/commercial-painting-services-rockford.html">
+                                Commercial Services
                             </a>
                         </p>
-                        <p><a title="Commercial Service" href="/commercial-hvac-service-highlands-texas.html">Commercial
-                                Service
-                            </a></p>
-                        <p><a title="Contact Us" href="/contact.html">Contact Us</a></p>
-                        <p><a title="HVAC Services" href="/hvac-service-highlands-texas.html">HVAC Services</a>
+                        <p>
+                            <a title="Residential Services" href="residential-painting-services-rockford.html">
+                                Residential Services
+                            </a>
                         </p>
-
-                        <p><a title="AC Installation" href="/ac-installation-near-highlands.html">AC Installation</a>
+                        <p>
+                            <a title="Contact Us" href="/contact.html">
+                                Contact Us
+                            </a>
+                        </p>
+                        <p>
+                            <a title="Painting Services" href="/contact.html">
+                                Painting Services
+                            </a>
+                        </p>
+                        <p>
+                            <a title="Trim Services" href="/trim-services-rockford.html">
+                                Trim Services
+                            </a>
                         </p>
                     </div>
                 </div>
 
                 <div class="col-lg col-md-4 col-12 mb-lg-0 mb-4 footer-col text-left">
-                    <p class="mb-3"><strong class="text-secondary h5 fw-500 fs-20"> Quick Links</strong></p>
+                    <p class="mb-3"><strong class="text-secondary h5 fw-500 fs-20"> Services</strong></p>
                     <div class="footer-nav">
-                        <p><a title="Service" href="/index.html#service">Our Services</a></p>
-                        <p><a title="About Us" href="/index.html#about">About Us</a></p>
-                        <p><a title="Free Quote" href="/index.html#quote">Get Free Quote</a></p>
-                        <p><a title="Gallery" href="/index.html#gallery">Gallery</a></p>
+                        <p>
+                            <a title="Indoor Painting" href="/indoor-painting-services-rockford.html">Indoor
+                                Painting
+                            </a>
+                        </p>
+                        <p>
+                            <a title="Outdoor Painting" href="/outdoor-painting-services-rockford.html">Outdoor
+                                Painting
+                            </a>
+                        </p>
+                        <p>
+                            <a title="Cabinets Installation"
+                                href="/cabinets-installation-repair-services-rockford.html">
+                                Cabinets Installation
+                            </a>
+                        </p>
+                        <p>
+                            <a title="Decks Installation" href="decks-installation-repair-rockford.html">
+                                Decks Installation
+                            </a>
+                        </p>
+                        <p>
+                            <a title="Dry Wall Services" href="decks-installation-repair-rockford.html">
+                                Dry Wall
+                            </a>
+                        </p>
                     </div>
                 </div>
 
@@ -571,7 +606,7 @@
                                 <path
                                     d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
                             </svg>
-                            <a href="tel:+17797711143"> +1 (281) 794-0144 </a>
+                            <a href="tel:+17797711143"> +1 (779) 771-1143 </a>
                         </p>
                         <p class="d-flex">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -580,12 +615,11 @@
                                     d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
                                 <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                             </svg>
-                            <span> Highlands, Texas</span>
+                            <span> Rocford, Illinois</span>
                         </p>
                     </div>
                 </div>
             </div>
-            <hr class="mt-4" />
 
             <p class="pt-2 pb-3 fw-500 text-white text-center border-1 border-top border-white pt-5">&copy; Bluejay
                 Painting. All
