feat: homepage done

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painting Services in Rocford, Illinois | Burgos Air Conditioning</title>
 
-    <meta name="description"
-        content="We offer professional HVAC services in Rocford, Illinois, specializing in heating, cooling, AC installation, and more">
-    <meta name="keywords" content="HVAC services, Highlands Texas, heating, cooling, AC installation, HVAC experts">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
 
@@ -37,19 +36,21 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" title="homepage" aria-current="page" href="">Painting Services</a>
+                            <a class="nav-link" title="Painting Services Navbar" aria-current="page"
+                                href="/painting-services-rockford.html">Painting Services</a>
                         </li>
                         <li class="nav-item">
-                            <a title="Air Conditioning" class="nav-link" href="">Commercial Services</a>
+                            <a title="Commercial Painting Services Navbar" class="nav-link"
+                                href="/commercial-painting-services-rockford.html">Commercial Services</a>
                         </li>
                         <li class="nav-item">
-                            <a title="Heaing Service" class="nav-link"
-                                href="/heating-service-highlands-texas.html">Residential Services</a>
+                            <a title="Residential Painting Services" class="nav-link"
+                                href="/residential-painting-services-rockford.html">Residential Services</a>
                         </li>
                     </ul>
 
                     <div style="z-index: 3;" class="d-lg-block d-flex justify-content-center">
-                        <a href="/contact.html" title="contact page"
+                        <a href="/contact.html" title="Contact Page Navbar"
                             class="btn btn-light fw-500 px-4 fs-18 rounded-1 col-lg col-12">
                             Contact Us
                         </a>
@@ -136,7 +137,7 @@
                 <div class="service">
                     <div class="img-div">
                         <img src="https://cdn4.iconfinder.com/data/icons/home-renovation-10/504/home-painting-exterior-design-renovate-256.png"
-                            alt="">
+                            alt="Home Image as Outdoor Painting">
                     </div>
                     <h4><a href="/outdoor-painting-services-rockford.html">Outdoor Painting</a></h4>
                     <p>Picture your property with a refreshed, eye-catching exterior, ready to impress.</p>
@@ -145,7 +146,7 @@
                 <div class="service">
                     <div class="img-div">
                         <img src="https://cdn4.iconfinder.com/data/icons/home-renovation-10/504/home-painting-exterior-design-renovate-256.png"
-                            alt="">
+                            alt="Room Image as Indoor Painting">
                     </div>
                     <h4><a href="/indoor-painting-services-rockford.html">Indoor Painting</a></h4>
                     <p>Imagine the comfort and style of a newly painted interior tailored to your taste.</p>
@@ -153,17 +154,16 @@
 
                 <div class="service">
                     <div class="img-div">
-                        <img src="https://cdn4.iconfinder.com/data/icons/home-renovation-10/504/home-painting-exterior-design-renovate-256.png"
-                            alt="">
+                        <img src="/img/drywall.png">
                     </div>
                     <h4>Drywall</h4>
                     <p>Imagine flawlessly finished walls, enhancing the beauty of your interiors.</p>
                 </div>
 
                 <div class="service">
-                    <div class="img-div">
+                    <div class="img-div"> 
                         <img src="https://cdn4.iconfinder.com/data/icons/home-renovation-10/504/home-painting-exterior-design-renovate-256.png"
-                            alt="">
+                            alt="Decks Installation">
                     </div>
                     <h4>Decks Installation & Repair</h4>
                     <p>Picture your gatherings on a revitalized deck, designed for lasting enjoyment.</p>
@@ -171,8 +171,8 @@
 
                 <div class="service">
                     <div class="img-div">
-                        <img src="https://cdn4.iconfinder.com/data/icons/home-renovation-10/504/home-painting-exterior-design-renovate-256.png"
-                            alt="">
+                        <img src="/img/cabinets.png"
+                            alt="Cabinets Installation">
                     </div>
                     <h4>Cabinets Installation & Repair</h4>
                     <p>Imagine organized, beautiful kitchen spaces tailored to your lifestyle.</p>
@@ -181,14 +181,14 @@
                 <div class="service">
                     <div class="img-div">
                         <img src="https://cdn4.iconfinder.com/data/icons/home-renovation-10/504/home-painting-exterior-design-renovate-256.png"
-                            alt="">
+                            alt="Trim Services">
                     </div>
                     <h4>Trim</h4>
                     <p>Add elegance with our detailed trim work, elevating your interior's aesthetics.</p>
                 </div>
             </div>
             <div class="d-flex justify-content-end">
-                <a class="btn btn-primary rounded-1 px-5 fs-18 text-end" href="">Call Now</a>
+                <a class="btn btn-primary rounded-1 px-5 fs-18 text-end" href="tel:+17797711143">Call Now</a>
             </div>
         </div>
     </section>
@@ -201,68 +201,53 @@
                     <p class="sub-header">About Us</p>
                     <h3 class="header text-white pb-4">We Paint your dream on your wall</h3>
                     <p class="my-4 ">
-                        Struggling to envision your ideal space? At Bluejay Drywall and Painting, we understand the
-                        frustration of lackluster interiors. You deserve a place that reflects your taste and style.
-                        From
-                        faded walls to outdated trim, we've been there too. That's why we've dedicated ourselves to
-                        becoming the experts you can trust. With every brushstroke, we aim to revive your space,
-                        creating an environment that truly feels like you.
+                        Ever find yourself struggling to picture your perfect space? We get it. At Bluejay Drywall and
+                        Painting, we've been there too. We believe you deserve a space that's a true reflection of your
+                        style. Whether it's tired walls or outdated trim, we've seen it all, and that's why we've made
+                        it our mission to be the experts you can rely on.
                         <br><br>
-                        Imagine stepping into a home that not only looks stunning but also feels uniquely yours. We're
-                        here to turn that dream into a reality. Our meticulous process ensures your vision is brought to
-                        life, leaving you with a space that exceeds expectations. From choosing the perfect shades to
-                        crafting detailed trim, we're dedicated to every aspect. Ready to experience the transformation?
-                        Contact us today and let's embark on this journey together.
+                        Picture this: walking into a home that not only looks amazing but also feels uniquely yours.
+                        That's what we're here for. Our careful process ensures your vision comes to life, leaving you
+                        with a space that goes above and beyond your expectations. From selecting just the right shades
+                        to crafting intricate trim, we're all in. Ready to witness the transformation? Reach out today,
+                        and let's start this journey together.
                     </p>
                     <ul>
-                        <li>Transforming Frustration into Inspiration</li>
-                        <li>Creating Personalized Environments</li>
-                        <li>Meticulous Craftsmanship</li>
-                        <li>Your Dream, Our Dedication</li>
+                        <li>Turning Frustration into Inspiration</li>
+                        <li>Crafting Personalized Environments</li>
+                        <li>Delivering Meticulous Craftsmanship</li>
+                        <li>Making Your Dream Our Dedication</li>
                     </ul>
 
-                    <a class="btn btn-secondary rounded-1 fs-18 px-5 mt-4" href="">Call now</a>
+                    <a class="btn btn-secondary rounded-1 fs-18 px-5 mt-4" href="tel:+17797711143">Call now</a>
                 </div>
                 <div class="img-div">
-                    <img src="/img/painting-ceiling.jpg" alt="">
+                    <img src="/img/painting-ceiling.jpg" alt="Painting Ceiling Image">
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Stats -->
-    <!-- <section class="stats">
+    <section class="commercial-residential">
         <div class="container">
             <div class="flex">
                 <div class="column">
-                    <p class="number ">12</p>
-                    <p class="info">Completed Projects</p>
+
                 </div>
 
                 <div class="column">
-                    <p class="number">7</p>
-                    <p class="info">Years Experience</p>
-                </div>
-
-                <div class="column">
-                    <p class="number">42</p>
-                    <p class="info">Team Members</p>
-                </div>
-
-                <div class="column">
-                    <p class="number">12</p>
-                    <p class="info">Active Clients</p>
+                    
                 </div>
             </div>
-        </div>        
-    </section> -->
+        </div>
+    </section>
 
     <!-- Why us -->
     <section class="why-us">
         <div class="container">
             <div class="flex">
                 <div class="img-div">
-                    <img src="/img/happy-painter-jumping.jpg" alt="">
+                    <img src="/img/happy-painter-jumping.jpg" alt="Happy Painter Jumping">
                 </div>
                 <div class="info-div">
                     <p class="sub-header">Why Choose Us</p>
@@ -284,7 +269,7 @@
                         <li>Lasting Impressions</li>
 
                     </ul>
-                    <a href="" class="btn btn-secondary rounded-1 px-5 fs-18">Call Now</a>
+                    <a href="tel:+17797711143" class="btn btn-secondary rounded-1 px-5 fs-18">Call Now</a>
                 </div>
             </div>
         </div>
@@ -294,9 +279,9 @@
 
     <!-- Social Media Ratings -->
 
-    <section data-aos="fade-up" class="py-2 position-relative">
-        <img class="position-absolute w-100 h-100 top-0 start-0"
-            style="z-index: -1; filter: brightness(70%); object-fit: cover;" src="/img/hero.jpg" alt="background-image">
+    <section data-aos="fade-up" class="py-2 position-relative bg-primary">
+        <!-- <img class="position-absolute w-100 h-100 top-0 start-0"
+         src="/img/painting-white-wall.jpg" alt="background-image"> -->
         <div data-aos="fade-up" class="ratings-grid mt-5 container">
             <div class="ratings-card">
                 <img src="/img/facebook.png" alt="facebok logo">
@@ -341,7 +326,7 @@
             <h3 class="header">What our Valuable Customers say</h3>
             <div class="testimonial-slider">
                 <div class="column">
-                    <img class="quote" src="/img/quote.png" alt="">
+                    <img class="quote" src="/img/quote.png" alt="Quote Icon 1">
                     <p class="data">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -350,7 +335,7 @@
                     </p>
                     <div class="user-info">
                         <div class="img-div">
-                            <img src="/img/lisa.png" alt="">
+                            <img src="/img/lisa.png" alt="Profile 1">
                         </div>
                         <div class="user-details">
                             <p class="name">Richard Simon</p>
@@ -359,7 +344,7 @@
                     </div>
                 </div>
                 <div class="column">
-                    <img class="quote" src="/img/quote.png" alt="">
+                    <img class="quote" src="/img/quote.png" alt="Quote Icon 2">
                     <p class="data">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -368,7 +353,7 @@
                     </p>
                     <div class="user-info">
                         <div class="img-div">
-                            <img src="/img/lisa.png" alt="">
+                            <img src="/img/lisa.png" alt="Profile 2">
                         </div>
                         <div class="user-details">
                             <p class="name">Richard Simon</p>
@@ -377,7 +362,7 @@
                     </div>
                 </div>
                 <div class="column">
-                    <img class="quote" src="/img/quote.png" alt="">
+                    <img class="quote" src="/img/quote.png" alt="Quote Icon 3">
                     <p class="data">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -386,7 +371,7 @@
                     </p>
                     <div class="user-info">
                         <div class="img-div">
-                            <img src="/img/lisa.png" alt="">
+                            <img src="/img/lisa.png" alt="Profile 3">
                         </div>
                         <div class="user-details">
                             <p class="name">Richard Simon</p>
@@ -395,7 +380,7 @@
                     </div>
                 </div>
                 <div class="column">
-                    <img class="quote" src="/img/quote.png" alt="">
+                    <img class="quote" src="/img/quote.png" alt="Quote Icon 4">
                     <p class="data">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -404,7 +389,7 @@
                     </p>
                     <div class="user-info">
                         <div class="img-div">
-                            <img src="/img/lisa.png" alt="">
+                            <img src="/img/lisa.png" alt="Profile 4">
                         </div>
                         <div class="user-details">
                             <p class="name">Richard Simon</p>
@@ -455,7 +440,7 @@
             </div>
 
             <div class="d-flex justify-content-center">
-                <a class="btn btn-secondary rounded-1 px-5 fs-18 mt-5" href="">Call Now</a>
+                <a class="btn btn-secondary rounded-1 px-5 fs-18 mt-5" href="tel:+17797711143">Call Now</a>
             </div>
         </div>
     </section>
