fix: logo changed

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="nav-hero home position-relative">
         <nav class="navbar navbar-expand-xl navbar-dark position-relative" style="z-index: 3;">
             <div class="container">
-                <a title="navbar-logo" class="navbar-brand" href="/index.html"><img src="/img/logo.png"
+                <a title="navbar-logo" class="navbar-brand" href="/index.html"><img src="/img/logo-white.png"
                         alt="nav-logo"></a>
                 <button style="z-index: 3;" class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
