--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Painting Services in Rocford, Illinois | Burgos Air Conditioning</title>
+    <title>Painting Services in Rockford, Illinois | Burgos Air Conditioning</title>
 
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Revamp your space with Bluejay Drywall and Painting. Expert drywall and painting services in Rockford, IL. Call now for a free estimate!">
+    <meta name="keywords" content="Rockford drywall services, Painting experts Rockford, Home improvement Rockford, Illinois painting contractors, Professional drywall installation, Expert painting services, Rockford remodeling specialists">
+    
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
 
@@ -24,7 +25,7 @@
 
 <body>
     <section class="nav-hero home position-relative">
-        <nav class="navbar navbar-expand-xl navbar-dark position-relative" style="z-index: 3;">
+        <nav data-aos="fade-down" class="navbar navbar-expand-xl navbar-dark position-relative" style="z-index: 3;">
             <div class="container">
                 <a title="navbar-logo" class="navbar-brand" href="/index.html"><img src="/img/logo-white.png"
                         alt="nav-logo"></a>
@@ -51,7 +52,7 @@
 
                     <div style="z-index: 3;" class="d-lg-block d-flex justify-content-center">
                         <a href="/contact.html" title="Contact Page Navbar"
-                            class="btn btn-light fw-500 px-4 fs-18 rounded-1 col-lg col-12">
+                            class="btn btn-danger fw-500 px-4 fs-18 rounded-1 col-lg col-12">
                             Contact Us
                         </a>
                     </div>
@@ -60,7 +61,7 @@
         </nav>
 
         <div class="hero position-relative">
-            <div class="container" data-aos="fade-down">
+            <div class="container" data-aos="fade-up">
                 <div class="d-lg-flex">
                     <div class="info-div">
                         <h1 class="mb-4">
@@ -71,7 +72,7 @@
                             bring creativity and precision to every project.
                         </p>
                         <div class="d-flex mt-xl-4 mt-5 pb-4">
-                            <a href="tel:+17797711143" class="btn btn-secondary fs-19 px-4 rounded-1">Call Now</a>
+                            <a href="tel:+17797711143" class="btn btn-danger fs-19 px-4 rounded-1">Call Now</a>
                             <a href="/index.html#services"
                                 class="ms-4 btn btn-outline-secondary fs-19 px-4 rounded-1">Our Services</a>
                         </div>
@@ -129,14 +130,14 @@
     <!-- Services -->
     <section id="services" class="services-section">
         <div class="container">
-            <div class="topic-box">
-                <p class="sub-header">Our Services</p>
+            <div class="topic-box" data-aos="fade-right">
+                <p class="sub-header sub-header-white">Our Services</p>
                 <h3 class="header text-white">Our Top Class Services</h3>
             </div>
-            <div class="services">
+            <div class="services" data-aos="fade-left"> 
                 <div class="service">
                     <div class="img-div">
-                        <img src="https://cdn4.iconfinder.com/data/icons/home-renovation-10/504/home-painting-exterior-design-renovate-256.png"
+                        <img src="/img/house.png"
                             alt="Home Image as Outdoor Painting">
                     </div>
                     <h4><a href="/outdoor-painting-services-rockford.html">Outdoor Painting</a></h4>
@@ -145,7 +146,7 @@
 
                 <div class="service">
                     <div class="img-div">
-                        <img src="https://cdn4.iconfinder.com/data/icons/home-renovation-10/504/home-painting-exterior-design-renovate-256.png"
+                        <img src="/img/bedroom.png"
                             alt="Room Image as Indoor Painting">
                     </div>
                     <h4><a href="/indoor-painting-services-rockford.html">Indoor Painting</a></h4>
@@ -162,7 +163,7 @@
 
                 <div class="service">
                     <div class="img-div"> 
-                        <img src="https://cdn4.iconfinder.com/data/icons/home-renovation-10/504/home-painting-exterior-design-renovate-256.png"
+                        <img src="/img/decks.svg"
                             alt="Decks Installation">
                     </div>
                     <h4>Decks Installation & Repair</h4>
@@ -180,14 +181,14 @@
 
                 <div class="service">
                     <div class="img-div">
-                        <img src="https://cdn4.iconfinder.com/data/icons/home-renovation-10/504/home-painting-exterior-design-renovate-256.png"
+                        <img src="/img/trim.png"
                             alt="Trim Services">
                     </div>
                     <h4>Trim</h4>
                     <p>Add elegance with our detailed trim work, elevating your interior's aesthetics.</p>
                 </div>
             </div>
-            <div class="d-flex justify-content-end">
+            <div class="d-flex justify-content-end" data-aos="fade-in">
                 <a class="btn btn-primary rounded-1 px-5 fs-18 text-end" href="tel:+17797711143">Call Now</a>
             </div>
         </div>
@@ -197,10 +198,10 @@
     <section class="about-us">
         <div class="container">
             <div class="flex">
-                <div class="info-div">
-                    <p class="sub-header">About Us</p>
+                <div class="info-div" data-aos="fade-right">
+                    <p class="sub-header sub-header-white">About Us</p>
                     <h3 class="header text-white pb-4">We Paint your dream on your wall</h3>
-                    <p class="my-4 ">
+                    <p class="my-4 info">
                         Ever find yourself struggling to picture your perfect space? We get it. At Bluejay Drywall and
                         Painting, we've been there too. We believe you deserve a space that's a true reflection of your
                         style. Whether it's tired walls or outdated trim, we've seen it all, and that's why we've made
@@ -221,35 +222,22 @@
 
                     <a class="btn btn-secondary rounded-1 fs-18 px-5 mt-4" href="tel:+17797711143">Call now</a>
                 </div>
-                <div class="img-div">
+                <div class="img-div" data-aos="fade-left">
                     <img src="/img/painting-ceiling.jpg" alt="Painting Ceiling Image">
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="commercial-residential">
-        <div class="container">
-            <div class="flex">
-                <div class="column">
-
-                </div>
-
-                <div class="column">
-                    
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Why us -->
     <section class="why-us">
         <div class="container">
             <div class="flex">
-                <div class="img-div">
-                    <img src="/img/happy-painter-jumping.jpg" alt="Happy Painter Jumping">
+                <div class="img-div" data-aos="fade-right">
+                    <img style="object-position: top;" src="/img/happy-painter.jpg" alt="Happy Painter">
                 </div>
-                <div class="info-div">
+                <div class="info-div" data-aos="fade-left">
                     <p class="sub-header">Why Choose Us</p>
                     <h3 class="header">We are leading the market successfully</h3>
 
@@ -269,7 +257,7 @@
                         <li>Lasting Impressions</li>
 
                     </ul>
-                    <a href="tel:+17797711143" class="btn btn-secondary rounded-1 px-5 fs-18">Call Now</a>
+                    <a href="tel:+17797711143" class="btn btn-primary rounded-1 px-5 fs-18">Call Now</a>
                 </div>
             </div>
         </div>
@@ -320,7 +308,7 @@
     </section>
 
     <!-- Testimonials -->
-    <section class="testimonials">
+    <section class="testimonials" data-aos="fade-up">
         <div class="container">
             <p class="sub-header">Clients Testimonials</p>
             <h3 class="header">What our Valuable Customers say</h3>
@@ -339,7 +327,7 @@
                         </div>
                         <div class="user-details">
                             <p class="name">Richard Simon</p>
-                            <p class="address">Rocford, Illinois</p>
+                            <p class="address">Rockford, Illinois</p>
                         </div>
                     </div>
                 </div>
@@ -357,7 +345,7 @@
                         </div>
                         <div class="user-details">
                             <p class="name">Richard Simon</p>
-                            <p class="address">Rocford, Illinois</p>
+                            <p class="address">Rockford, Illinois</p>
                         </div>
                     </div>
                 </div>
@@ -375,7 +363,7 @@
                         </div>
                         <div class="user-details">
                             <p class="name">Richard Simon</p>
-                            <p class="address">Rocford, Illinois</p>
+                            <p class="address">Rockford, Illinois</p>
                         </div>
                     </div>
                 </div>
@@ -393,7 +381,7 @@
                         </div>
                         <div class="user-details">
                             <p class="name">Richard Simon</p>
-                            <p class="address">Rocford, Illinois</p>
+                            <p class="address">Rockford, Illinois</p>
                         </div>
                     </div>
                 </div>
@@ -401,7 +389,7 @@
         </div>
     </section>
 
-    <section class="how-it-works">
+    <section class="how-it-works" data-aos="fade-up">
         <div class="container">
             <p class="sub-header">How it works </p>
             <h3 class="header text-white mb-5">Simple Easy steps to get started</h3>
@@ -600,7 +588,7 @@
                                     d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
                                 <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                             </svg>
-                            <span> Rocford, Illinois</span>
+                            <span> Rockford, Illinois</span>
                         </p>
                     </div>
                 </div>
