feat: website completed

--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us | Bluejay Painting</title>
+    <title>Contact Us | Bluejay Drywall & Painting</title>
 
     <meta name="description"
         content="Contact us for all your HVAC service inquiries in Rockford, Illinois. Get in touch for professional consultation and reliable HVAC services.">
-    <meta name="keywords" content="Contact us, get in touch, HVAC services, Rockford, Illinois, inquiries, consultation">
+    <meta name="keywords"
+        content="Contact us, get in touch, HVAC services, Rockford, Illinois, inquiries, consultation">
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
 
@@ -24,8 +25,8 @@
 </head>
 
 <body>
-    <section class="nav-hero position-relative">
-        <nav class="navbar navbar-expand-xl navbar-dark position-relative" style="z-index: 3;">
+    <section class="nav-hero inner position-relative">
+        <nav data-aos="fade-down" class="navbar navbar-expand-xl navbar-dark position-relative" style="z-index: 3;">
             <div class="container">
                 <a title="navbar-logo" class="navbar-brand" href="/index.html"><img src="/img/logo-white.png"
                         alt="nav-logo"></a>
@@ -37,25 +38,47 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" title="homepage" aria-current="page" href="">Painting Services</a>
+                            <a class="nav-link" title="Painting Services Navbar" aria-current="page"
+                                href="/painting-services-rockford.html">Painting Services</a>
                         </li>
                         <li class="nav-item">
-                            <a title="Air Conditioning" class="nav-link" href="">Drywall Services</a>
+                            <a title="Commercial Painting Services Navbar" class="nav-link"
+                                href="/commercial-painting-services-rockford.html">Commercial Services</a>
                         </li>
                         <li class="nav-item">
-                            <a title="Heaing Service" class="nav-link" href="">Service Areas</a>
+                            <a title="Residential Painting Services" class="nav-link"
+                                href="/residential-painting-services-rockford.html">Residential Services</a>
                         </li>
                     </ul>
 
                     <div style="z-index: 3;" class="d-lg-block d-flex justify-content-center">
-                        <a href="/contact.html" title="contact page"
-                            class="btn btn-light fw-500 px-4 fs-18 rounded-1 col-lg col-12">
+                        <a href="/contact.html" title="Contact Page Navbar"
+                            class="btn btn-danger fw-500 px-4 fs-18 rounded-1 col-lg col-12">
                             Contact Us
                         </a>
                     </div>
                 </div>
             </div>
         </nav>
+
+        <div class="hero position-relative">
+            <div class="container" data-aos="fade-up">
+                <div class="d-lg-flex">
+                    <div class="info-div w-100">
+                        <h1 class="mb-5 text-center">
+                            Contact Us
+                        </h1>
+                        <div class="d-flex justify-content-center mt-xl-4 mt-5">
+                            <a title="Call Us Now" href="tel:+17797711143"
+                                class="btn btn-danger fs-19 px-5 rounded-1 fs-18">Call Now</a>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img class="bg-img" src="/img/white-kitchen-cabinets.jpg" alt="White Kitchen Cabinets">
     </section>
 
     <section class="map">
@@ -65,7 +88,7 @@
                 <div class="row flex-md-row flex-row-reverse flex-column-reverse">
                     <div class="col-md-9">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27694.412166801594!2d-95.07947150082896!3d29.812277952613034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x863f589acbd4828d%3A0x54174a2d193eb8b1!2sHighlands%2C%20TX%2C%20USA!5e0!3m2!1sen!2snp!4v1689767259431!5m2!1sen!2snp"
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d78887.23127047162!2d-89.11005086150226!3d42.25913079182793!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x565d844dfa1797d%3A0x52f4319176a7588f!2sBlue%20Jay%20Drywall%20%26%20Painting!5e0!3m2!1sen!2snp!4v1695267406217!5m2!1sen!2snp"
                             width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
@@ -142,12 +165,12 @@
                             </a>
                         </p>
                         <p>
-                            <a title="Decks Installation" href="decks-installation-repair-rockford.html">
+                            <a title="Decks Installation" href="deck-installation-repair-rockford.html">
                                 Decks Installation
                             </a>
                         </p>
                         <p>
-                            <a title="Dry Wall Services" href="decks-installation-repair-rockford.html">
+                            <a title="Dry Wall Services" href="deck-installation-repair-rockford.html">
                                 Dry Wall
                             </a>
                         </p>
