--- a/deck-installation-repair-rockford.html
+++ b/deck-installation-repair-rockford.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indoor Painting Services in Rockford, Illinois | Bluejay Drywall & Painting</title>
+    <title>Deck Installation and Repair Services in Rockford, Illinois | Bluejay Drywall & Painting</title>
 
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -64,8 +64,8 @@
             <div class="container" data-aos="fade-up">
                 <div class="d-lg-flex">
                     <div class="info-div w-100">
-                        <h1 class="mb-5 text-center">
-                            Indoor Painting Services
+                        <h1 class="mb-4 text-center">
+                            Deck Installation & Repair Services
                         </h1>
                         <div class="d-flex justify-content-center mt-xl-4 mt-5">
                             <a title="Call Us Now" href="tel:+17797711143"
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </div>
-        <img class="bg-img" style="object-position: center;" src="/img/painting-ceiling.jpg" alt="Painting Ceiling">
+        <img class="bg-img" src="/img/decks-installation.jpg" alt="Deck Installation Process">
     </section>
 
     <!-- Why us -->
@@ -85,18 +85,19 @@
         <div class="container">
             <div class="flex">
                 <div class="img-div" data-aos="fade-right">
-                    <img style="object-position: end;" src="/img/happy-painter.jpg" alt="Happy Painter">
+                    <img style="object-position: center;" src="/img/decks-installation.jpg" alt="Painter painting wall">
                 </div>
                 <div class="info-div" data-aos="fade-left">
                     <p class="sub-header">Bluejay Drywall & Painting</p>
-                    <h3 class="header">Expert  Indoor Painting Services in Rockford, IL</h3>
+                    <h3 class="header">Expert Deck Installation & Repair Services in Rockford, IL</h3>
 
                     <p class="my-4">
-                        Making the right choice for your project is crucial. At Bluejay Painting Services, we're not
-                        just painters; we're your partners in transforming indoor spaces. Our dedication to your vision,
+                        Making the right choice for your project is crucial. At Bluejay Installations, we're not
+                        just installers; we're your collaborators in enhancing outdoor spaces. Our dedication to your
+                        vision,
                         combined
                         with our precise workmanship, sets us apart. We listen, we design, and we deliver.
-                        Experience the confidence of a job well executed. Your envisioned indoor space is within reach,
+                        Experience the confidence of a job well executed. Your envisioned outdoor space is within reach,
                         meticulously crafted by Bluejay. Here's why you should choose us:
                     </p>
                     <ul class="mb-5">
